--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <body style="color:red">
     <div class="wrapper">
       <header>
         <h1>Learngit</h1>
         <p></p>
 
-        <p class="view"><a href="https://github.com/Hello-world8/learngit">View the Project on GitHub <small>Hello-world8/learngit</small></a></p>
+        <p class="view"><a href="https://github.com/Hello-world8/learngit">hello world88 <small>Hello-world8/learngit</small></a></p>
 
 
         <ul>
